// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H2: Component should render children when passed in 1`] = `
<h2
  style={
    Object {
      "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
      "fontSize": "24px",
      "fontWeight": 100,
      "margin": 0,
    }
  }
>
  Super title
</h2>
`;

exports[`H2: Component should render correctly 1`] = `
<h2
  style={
    Object {
      "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
      "fontSize": "24px",
      "fontWeight": 100,
      "margin": 0,
    }
  }
/>
`;

exports[`H2: Component should render with attributes 1`] = `
<h2
  id="test-id"
  style={
    Object {
      "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
      "fontSize": "24px",
      "fontWeight": 100,
      "margin": 0,
    }
  }
  title="test title"
>
  Title with attributes
</h2>
`;

exports[`H2: Component should render with custom styles 1`] = `
<h2
  style={
    Object {
      "color": "blue",
      "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
      "fontSize": "24px",
      "fontWeight": 100,
      "margin": 0,
    }
  }
>
  Blue title
</h2>
`;

exports[`H2: Component should render with custom theme 1`] = `
<h2
  style={
    Object {
      "color": "gray",
      "fontFamily": "serif",
      "margin": 0,
      "size": "100px",
    }
  }
>
  Title with custom theme
</h2>
`;

exports[`H2: Component should render with overwritten styles 1`] = `
<h2
  style={
    Object {
      "color": "blue",
      "fontSize": "10px",
    }
  }
>
  Blue title with overwritten styles
</h2>
`;
